soa-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  generation: 9
  labels:
    app: soa
  name: soa
spec:
  replicas: 1
  selector:
    app: soa
    deploymentconfig: soa
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: soa
        deploymentconfig: soa
    spec:
      containers:
      - env:
        - name: hostname
          value: soa
        image: @IMAGE@
        imagePullPolicy: IfNotPresent
        name: soa
        ports:
        - containerPort: 7001
          protocol: TCP
        - containerPort: 7453
          protocol: TCP
        - containerPort: 5004
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: useroot
      serviceAccountName: useroot
      terminationGracePeriodSeconds: 30
