soa-route-servicebus.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: soa-servicebus
spec:
  host: console-@PROJECT@.devconapps.belldev.dev.bce.ca
  path: /servicebus
  port:
    targetPort: 7001-tcp
  to:
    kind: Service
    name: soa
    weight: 100
  wildcardPolicy: None
