soa-route-tesapp.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: soa-testingapp
spec:
  host: soa-servicebus-@PROJECT@.devconapps.belldev.dev.bce.ca
  path: @SERVICE_URL@
  port:
    targetPort: 7001-tcp
  to:
    kind: Service
    name: soa
    weight: 100
  wildcardPolicy: None
